Changed Menu Structure

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,7 @@
 <resources>
-    <string name="app_name">Schulapp</string>
+    <string name="app_name">Reuchlin-Gymnasium-Ingolstadt</string>
+    <string name="title_home">Startseite</string>
+    <string name="title_dashboard">Vertretungsplan</string>
+    <string name="title_notifications">Schulaufgabenplan</string>
+    <string name="title_Einstellungen">Einstellungen</string>
 </resources>
