removed fragment files

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,5 +4,5 @@
     <string name="title_dashboard">Vertretungsplan</string>
     <string name="title_notifications">Schulaufgabenplan</string>
     <string name="title_Einstellungen">Einstellungen</string>
-
+    <string name="test">test</string>
 </resources>
