impoved design code

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,8 +1,9 @@
 <resources>
-    <string name="app_name">Schulapp</string>
-    <string name="title_home">Startseite</string>
-    <string name="title_dashboard">Vertretungsplan</string>
-    <string name="title_notifications">Schulaufgabenplan</string>
+    <string name="app_name">SchoolController</string>
+    <string name="title_Startseite">Startseite</string>
+    <string name="title_Vertretungsplan">Vertretungsplan</string>
+    <string name="title_Schulaufgabenplan">Schulaufgabenplan</string>
     <string name="title_Einstellungen">Einstellungen</string>
-    <string name="test">test</string>
+
+
 </resources>
