--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,6 +4,7 @@
     <string name="title_Vertretungsplan">Vertretungsplan</string>
     <string name="title_Schulaufgabenplan">Schulaufgabenplan</string>
     <string name="title_Einstellungen">Einstellungen</string>
-
+    <string name="Willkommensnachricht_ohne_Token">Willkommen in der SchoolController-APP! Bitte Token eingeben.</string>
+    <string name="Willkommensnachricht_mit_Token">Willkommen in der APP für deinen Schulalltag.</string>
 
 </resources>
