--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,6 +10,6 @@
     <string name="Platzhalter">Hier folgt noch etwas...Keine Angst!</string>
     <string name="Errormessage">Anscheind gibt es einen Error. Bitte wende dich an deinen Administrator</string>
     <string name="Boring">Wenn dir dies angezeigt wird, dann war den Codern wohl langweilig... Man sollte denen vllt mal Kaffee und Pizza bringen</string>
-
+    <string name="title_Mitteilungen">Mitteilungen</string>
 
 </resources>
