--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,5 +13,5 @@
     <string name="title_Mitteilungen">Mitteilungen</string>
     <string name="title_schuelerausweis">Dein Schülerausweis</string>
     <string name="title_Schuleanrufen">Rufe im Sekretariat an, wenn du Probleme hast! Ganz einfach ohne großes Nummer suchen!</string>
-
+    <string name="Forbidden">Was machst du hier? Weg da!</string>
 </resources>
