--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,4 +14,5 @@
     <string name="title_schuelerausweis">Dein Schülerausweis</string>
     <string name="title_Schuleanrufen">Rufe im Sekretariat an, wenn du Probleme hast! Ganz einfach ohne großes Nummer suchen!</string>
     <string name="Forbidden">Was machst du hier? Weg da!</string>
+    <string name="Update">Gute Nachrichten! Die Entwickler haben einen neue Version freigegeben! Hol sie dir jetzt!!></string>
 </resources>
