--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,7 +12,7 @@
     <string name="Boring">Wenn dir dies angezeigt wird, dann war den Codern wohl langweilig... Man sollte denen vllt mal Kaffee und Pizza bringen</string>
     <string name="title_Mitteilungen">Mitteilungen</string>
     <string name="title_schuelerausweis">Dein Schülerausweis</string>
-    <string name="title_Schuleanrufen">Rufe im Sekretariat an, wenn du Probleme hast! Ganz einfach ohne großes Nummer suchen!</string>
+    <string name="title_Schuleanrufen">Rufe im Sekretariat an, wenn du Probleme hast! Ganz einfach, ohne großes tippen und suchen!</string>
     <string name="Forbidden">Was machst du hier? Weg da!</string>
     <string name="Update">Gute Nachrichten! Die Entwickler haben einen neue Version freigegeben! Hol sie dir jetzt!!></string>
     <string name="Ansicht">Ansicht wechseln</string>
